# glibc

./: .gitignore  ChangeLog  Makeconfig  NEWS  aclocal.m4  config.h.in
elf/: dl-runtime.c  elf.h
locale/: Makefile
malloc/: malloc.c
nptl/: Makefile  tst-cancel7.c
posix/: tst-getaddrinfo4.c
scripts/: build-many-glibcs.py  config.sub
stdlib/: longlong.h
sunrpc/: thrsvc.c
support/: Makefile  support_record_failure.c
sysdeps/arc/: Makefile  Versions  __longjmp.S  abort-instr.h  atomic-machine.h  configure  configure.ac  crti.S  crtn.S  dl-machine.h  dl-runtime.c  dl-sysdep.h  dl-tls.h  dl-trampoline.S  fpu_control.h  gccframe.h  get-rounding-mode.h  gmp-mparam.h  isa-asm-macro-32.h  isa-asm-macro-64.h  isa-asm-macros.h  jmpbuf-offsets.h  jmpbuf-unwind.h  ldsodefs.h  libc-tls.c  libm-test-ulps  machine-gmon.h  math-tests-trap.h  math-tests.h  math_private.h  memusage.h  preconfigure  setjmp.S  sfp-machine.h  sotruss-lib.c  stackinfo.h  start.S  sysdep.h  tls-macros.h  tst-audit.h
sysdeps/arc/arc64/fpu/: libm-test-ulps
sysdeps/arc/arc64/nofpu/: libm-test-ulps
sysdeps/arc/bits/: endian.h  fenv.h  link.h  setjmp.h
sysdeps/arc/fpu/: fclrexcpt.c  fegetenv.c  fegetmode.c  fegetround.c  feholdexcpt.c  fesetenv.c  fesetexcept.c  fesetmode.c  fesetround.c  feupdateenv.c  fgetexcptflg.c  fraiseexcpt.c  fsetexcptflg.c  ftestexcept.c  math-use-builtins-fma.h  math-use-builtins-sqrt.h
sysdeps/arc/nofpu/: math-tests-exception.h  math-tests-exceptions.h  math-tests-rounding.h
sysdeps/arc/nptl/: Makefile  pthread_spin_lock.c  pthreaddef.h  tls.h
sysdeps/arc/nptl/bits/: pthreadtypes-arch.h  semaphore.h
sysdeps/unix/: make-syscalls.sh
sysdeps/unix/sysv/linux/: internal-signals.h  syscall-names.list
sysdeps/unix/sysv/linux/aarch64/sys/: ucontext.h
sysdeps/unix/sysv/linux/arc/: Makefile  Versions  arch-fork.h  arch-syscall.h  cacheflush.c  clone.S  clone3.S  configure  configure.ac  dl-static.c  getcontext.S  ipc_priv.h  jmp_buf-macros.h  kernel-features.h  ld.abilist  ldconfig.h  ldsodefs.h  libBrokenLocale.abilist  libanl.abilist  libc.abilist  libcrypt.abilist  libdl.abilist  libm.abilist  libnsl.abilist  libpthread.abilist  libresolv.abilist  librt.abilist  libthread_db.abilist  libutil.abilist  localplt.data  makecontext.c  mmap.c  mmap64.c  mmap_internal.h  setcontext.S  shlib-versions  sigaction.c  sigcontextinfo.h  sigrestorer.S  swapcontext.S  (+7 more)
sysdeps/unix/sysv/linux/arc/arc32/: Implies
sysdeps/unix/sysv/linux/arc/arc64/: Implies  arch-syscall.h  ld.abilist  libc.abilist  libc_malloc_debug.abilist  libresolv.abilist  localplt.data
sysdeps/unix/sysv/linux/arc/bits/: fcntl.h  mman.h  procfs-id.h  procfs.h  sigaction.h
sysdeps/unix/sysv/linux/arc/bits/types/: __sigset_t.h
sysdeps/unix/sysv/linux/arc/sys/: cachectl.h  procfs.h  ucontext.h  user.h
timezone/: tst-tzset.c  zic.c
